--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@auliakbarh/text",
   "version": "0.1.0",
   "description": "Text component for react-native",
-  "source": "./src/index.tsx",
+  "source": "./src/index.ts",
   "main": "./lib/commonjs/index.js",
   "module": "./lib/module/index.js",
   "types": "./lib/typescript/src/index.d.ts",
@@ -59,27 +59,28 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^17.0.2",
-    "@evilmartians/lefthook": "^1.5.0",
-    "@react-native/eslint-config": "^0.73.1",
-    "@release-it/conventional-changelog": "^5.0.0",
-    "@types/jest": "^29.5.5",
-    "@types/react": "^18.2.44",
-    "commitlint": "^17.0.2",
-    "del-cli": "^5.1.0",
-    "eslint": "^8.51.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "jest": "^29.7.0",
-    "prettier": "^3.0.3",
+    "@commitlint/config-conventional": "17.8.1",
+    "@evilmartians/lefthook": "1.7.11",
+    "@react-native/eslint-config": "0.73.2",
+    "@release-it/conventional-changelog": "5.1.1",
+    "@types/jest": "29.5.12",
+    "@types/react": "18.3.3",
+    "commitlint": "17.8.1",
+    "del-cli": "5.1.0",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "jest": "29.7.0",
+    "prettier": "3.3.3",
     "react": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-builder-bob": "^0.28.1",
-    "release-it": "^15.0.0",
-    "typescript": "^5.2.2"
+    "react-native-builder-bob": "0.28.1",
+    "react-test-renderer": "18.3.1",
+    "release-it": "15.11.0",
+    "typescript": "5.5.4"
   },
   "resolutions": {
-    "@types/react": "^18.2.44"
+    "@types/react": "18.3.3"
   },
   "peerDependencies": {
     "react": "*",
